<resources>

    <string name="app_name">ListPop</string>
    <string name="menu_settings">Settings</string>
    <string name="listpopbanner">ListPop!</string>
    <string name="nexttext">Next</string>
    <string name="poptext">Move to pop!</string>
    <string name="poplist">Pop!</string>
    <string name="addlistname">List Name</string>
    <string name="addlistnameprompt">List name</string>
    <string name="addlistitem">Entries</string>
    <string name="addlistitemprompt">Add new entries to your list here..</string>
    <string name="finishednewlist">Save List</string>
    <string name="menu_delete">Delete</string>
    <string name="no_items">Add at least one item!</string>
    <string name="no_header">Missing name!</string>
    <string name="number_range_menu_title">Number Range</string>
    <string name="preset_spinner_prompt">Presets</string>
    <string name="invalid_range">Invalid range!</string>

    <string-array name="preset_choice_array">
        <item>Number Range</item>
        <item>Letter Range</item>
        <item>Eight Ball</item>
    </string-array>

    <string name="preset_name_header">Presets</string>
    <string name="optional">Enter optional list name here..</string>
    <string name="yes_no_fragment_text">Yes/No</string>

    <string-array name="letters">
        <item>a</item>
        <item>b</item>
        <item>c</item>
        <item>d</item>
        <item>e</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>i</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>m</item>
        <item>n</item>
        <item>o</item>
        <item>p</item>
        <item>q</item>
        <item>r</item>
        <item>s</item>
        <item>t</item>
        <item>u</item>
        <item>v</item>
        <item>w</item>
        <item>x</item>
        <item>y</item>
        <item>z</item>
    </string-array>

    <string name="to">to</string>
    <string name="edit">E</string>
    <string name="delete">D</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="custom_list">Add Custom List</string>
    <string name="preset_list">Add Preset List</string>
    <string name="add_item">Add new item</string>

    <string-array name="eight_ball">
        <item>It is certain</item>
        <item>It is decidedly so</item>
        <item>Without a doubt</item>
        <item>Definitely</item>
        <item>You may rely on it</item>
        <item>As I see it, yes</item>
        <item>Most likely</item>
        <item>Yes</item>
        <item>Signs point to yes</item>
        <item>Reply hazy, try again</item>
        <item>Ask again later</item>
        <item>Better not tell you now</item>
        <item>Cannot predict now</item>
        <item>Concentrate and ask again</item>
        <item>"Don't count on it"</item>
        <item>My reply is no</item>
        <item>My sources say no</item>
        <item>Outlook no so good</item>
        <item>Very doubtful</item>
    </string-array>
    
    <string name="optionaleightball">Add new items to this preset here..</string>
    <string name="finishpreset">Add To List</string>

    <string name="dialog_set_number">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_picker_title">Choose a number</string>
    <string name="no_lower_bound">Add a lower bound!</string>
    <string name="no_upper_bound">Add an upper bound!</string>
    <string name="invalid_number">Invalid number!</string>
    <string name="numberpicker_prompt">0-99</string>
</resources>