<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/edit"
        android:showAsAction="ifRoom"
        android:title="@string/menu_edit"/>
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/add"
        android:showAsAction="ifRoom"
        android:title="@string/menu_add">
        <menu android:id="@+id/add_menu" >
            <item
                android:id="@+id/custom"
                android:title="@string/custom_list"/>
            <item
                android:id="@+id/preset"
                android:title="@string/preset_list"/>
            <item
                android:id="@+id/tab"
                android:title="Tabs"/>
            <item
                android:id="@+id/populate"
                android:title="Populate"/>
            <item
                android:id="@+id/clear"
                android:title="Clear"/>
        </menu>
    </item>

</menu>